--- a/galery.html
+++ b/galery.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Galeria Flex</title>
-    <link rel="stylesheet" href="style.css">
-    
+    <base href="/">
+    <link href="/css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
@@ -36,6 +36,6 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="/javascript/main.js"></script>
 </body>
 </html>
